[gd_scene load_steps=6 format=3 uid="uid://qcgvucy2xawg"]

[ext_resource type="Script" path="res://control.gd" id="1_hw0dw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lua44"]
bg_color = Color(0.136826, 0.136826, 0.136826, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gciuk"]
content_margin_left = 5.0
bg_color = Color(0.262932, 0.262932, 0.262932, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u4dq6"]
bg_color = Color(0.262745, 0.262745, 0.262745, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ah3q"]
bg_color = Color(0.310617, 0.310617, 0.310617, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hw0dw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lua44")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "S&kox packer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_gciuk")
placeholder_text = "packed file name"

[node name="select" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_u4dq6")
theme_override_styles/hover = SubResource("StyleBoxFlat_5ah3q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u4dq6")
text = "select unpacked addon folder"

[node name="pack" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_u4dq6")
theme_override_styles/hover = SubResource("StyleBoxFlat_5ah3q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u4dq6")
text = "pack"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 1
size = Vector2i(640, 480)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/pack" to="." method="_on_pack_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
